--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="container">
     <img src="LOGO.PNG" alt="Logo" class="logo" />
     <h2>🎟️ Lista de Invitados 🎟️</h2>
-    <div class="subtitle">Dinámica 2</div>
+    <div class="subtitle">Dinámica 3</div>
     <p>Anota tu nombre completo y asegura tu acceso a: <br><b>Alamo's Club X Halloween</b>.</p>
 
     <div id="countdown"></div>
@@ -111,7 +111,7 @@
 
     <div id="closed">🚫 Registro cerrado. Mantente atento a próximas dinámicas.</div>
     <div class="small">
-      Solo serán válidos los nombres que cumplan con los 2 puntos mencionados en la dinámica.<br> 
+      <br> Agrega también a tus amigos en la lista y asegúrales entrada sin cover.
       🔒¡Tu privacidad está protegida!. 🔒
     </div>
   </div>
@@ -196,7 +196,8 @@
     // Contador (24 horas)
     const countdownEl = document.getElementById('countdown');
     const closedEl = document.getElementById('closed');
-    let endTime = new Date("Oct 11, 2025 16:00:00").getTime();
+   let endTime = new Date("Oct 18, 2025 14:00:00").getTime();
+
 
     const timer = setInterval(() => {
       const now = Date.now();
