Diseño con salto

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div id="closed">🚫 Registro cerrado. Mantente atento a próximas dinámicas.</div>
     <div class="small">
-      <br> Agrega también a tus amigos en la lista y asegúrales entrada sin cover.
+      <br> Agrega también a tus amigos en la lista y asegúrales entrada sin cover. <br> 
       🔒¡Tu privacidad está protegida!. 🔒
     </div>
   </div>
